@@ -71,6 +71,9 @@ Lintian-Tags: missing-debian-source-format
 Fix-Script: missing-vcs-browser-field.py
 Lintian-Tags: missing-vcs-browser-field
 
+Fix-Script: orphaned-package-should-not-have-uploaders.py
+Lintian-Tags: orphaned-package-should-not-have-uploaders
+
 Fix-Script: out-of-date-copyright-format-uri.sh
 Lintian-Tags: out-of-date-copyright-format-uri
 
