@@ -1,0 +1,3 @@
+Source: lintian-brush
+Maintainer: Debian QA Team <packages@qa.debian.org>
+Uploaders: Somebody <somebody@example.com>
