@@ -1,0 +1,2 @@
+Remove uploaders from orphaned package.
+Fixed-Lintian-Tags: orphaned-package-should-not-have-uploaders
