@@ -1,0 +1,2 @@
+Source: lintian-brush
+Maintainer: Debian QA Team <packages@qa.debian.org>
